# ntrc_lmd

./: .env  .gitattributes  .gitignore  .gitmodules  Makefile  README.md  bronze_pipeline.py  pyproject.toml  schema_bronze.dbml  schema_silver.dbml  source_data_files.md
.dlt/: config.toml  secrets.toml
docs/: _config.yml  _toc.yml  intro.md  quickstart.md
docs/discovery/gold/: gold.py
docs/discovery/silver/: sat_midi_file.py  sat_track.py  silver.py
docs/examples/: tokenization.py
html/: .buildinfo  echonest_features_guide.html  genindex.html  intro.html  objects.inv  quickstart.html  search.html  searchindex.js
html/_sources/: echonest_features_guide.md  intro.md  quickstart.md
html/_sources/examples/: tokenization.py
html/_static/: basic.css  documentation_options.js  mystnb.8ecb98da25f57f5357bf6f572d296f466b2cfe2517ffebfabe82451661e28f02.css  sphinx-thebe.css  sphinx-thebe.js  togglebutton.css  togglebutton.js
html/discovery/gold/: gold.html
html/examples/: tokenization.html
lakh_midi_dataset/: __init__.py  bronze_pipeline.py  h5_utils.py  render_midi.py
lakh_midi_dbt/: dbt_project.yml  profiles.yml
lakh_midi_dbt/analyses/: find_artist_multiple_similar_arrays.sql  find_hotttnesss_outliers.sql  find_key_signature_outliers.sql  find_midi_score_outliers.sql  find_mode_outliers.sql  find_time_signature_outliers.sql
lakh_midi_dbt/models/: sources.yml
lakh_midi_dbt/seeds/: ref_key_signatures.csv  ref_modes.csv
lakh_midi_dbt/tests/: test_mbtags_sorted_by_count.sql  test_similarity_duplicates.sql
notebooks/: explore_h5.py  explore_lmd_full.py
(+70 files in other folders)
