[project]
name = "lakh-midi-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.10.6",
    "dbt-duckdb>=1.9.4",
    "dlt[parquet]>=1.14.1",
    "duckdb>=1.3.2",
    "h5py>=3.14.0",
    "ipykernel>=6.30.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "tqdm>=4.67.1",
]
