[project]
name = "lakh-midi-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.10.6",
    "dbt-duckdb>=1.9.4",
    "dlt[parquet]>=1.14.1",
    "duckdb>=1.3.2",
    "h5py>=3.14.0",
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
    "jupyter-book>=1.0.4.post1",
    "jupytext>=1.17.2",
    "kaleido>=1.0.0",
    "magic-duckdb>=0.1.32",
    "numpy>=2.1.3",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "pyarrow>=21.0.0",
    "symbolic-music>=0.1.0",
    "tqdm>=4.67.1",
    "ydata-profiling",
]

[tool.setuptools]
packages = ["lakh_midi_dataset"]
